--- a/app/views/devise/mailer/reset_password_instructions.html.erb
+++ b/app/views/devise/mailer/reset_password_instructions.html.erb
@@ -1,38 +1,59 @@
+<!-- header includes  ——————————————————————————————————————————————————  -->
+
+<%= content_for(:header) do %>
+	<style type="text/css">
+		div#devise_generated_content form { margin-bottom:20px; } 
+		div#devise_generated_content a { color:orange; }
+		div#devise_generated_content input {margin-bottom:10px;}
+		div#center_column { /* override default layout */
+			padding-left:40px; 
+			padding-top:0px;
+			}
+		div#center_column div#devise_generated_content h2 { 
+			background-color: orange;
+			color:white;
+			padding: 5px 10px 10px 10px;
+			width: 155px;
+		}
+		div#center_column div#devise_generated_content hr { 
+			width:94%;
+			float:left;
+			margin-top:-11px;
+			padding-top:0px;
+		}
+	</style>
+<% end %>
 
 <!-- body includes  ————————————————————————————————————————————————————  -->
-<%= content_for(:body) do %>
 
-	<div id="body-background">	
-		<!-- <img src="../images/landscapes/road_aero.jpg" width="1354" height="900" alt="Bg"> -->
-	</div>
-	<div id="container">
-		<div id="subcontainer">
+<%= content_for(:middleBand) do %>
 
-			<!-- menu —————————————————————————————————————————————————————  -->
+	<div id="left_column" >
 
-			<%= render :partial => 'shared/menu' %>
-			<%= render :partial => 'shared/search' %>
+		<!-- menu —————————————————————————————————————————— -->
+		<%= render(:partial => 'shared/menu') %>
 
-	    <!-- main content —————————————————————————————————————————————— -->
+		<!-- featured products  ———————————————————————————— -->
+		<%= render(:partial => 'shared/featuredProducts') %>
+		
+	</div><!-- end of div 'left_column' -->
 
-			<div id="main_content">
+	<div id="center_column">
 				
-				<!-- menu popups: top level categories ——————————————————————————————————— -->
-				<%= render(:partial => "/shared/menu_popups") %>
-				
-				<div id="devise_generated_content">
-					<p>Hello <%= @resource.email %>!</p>
+		<!-- menu popups: top level categories ——————————————————————————————————— -->
+		<%= render(:partial => "/shared/menu_popups") %>
+		
+		<div id="devise_generated_content">
+			<p>Hello <%= @resource.email %>!</p>
 
-					<p>Someone has requested a link to change your password, and you can do this through the link below.</p>
+			<p>Someone has requested a link to change your password, and you can do this through the link below.</p>
 
-					<p><%= link_to 'Change my password', edit_password_url(@resource, :reset_password_token => @resource.reset_password_token) %></p>
+			<p><%= link_to 'Change my password', edit_password_url(@resource, :reset_password_token => @resource.reset_password_token) %></p>
 
-					<p>If you didn't request this, please ignore this email.</p>
-					<p>Your password won't change until you access the link above and create a new one.</p>
+			<p>If you didn't request this, please ignore this email.</p>
+			<p>Your password won't change until you access the link above and create a new one.</p>
 
-				</div> <!-- end div#devise_generated_content -->
-
-			</div> <!-- end div#main_content -->
-		</div> <!-- end div#subcontainer -->
-	</div> <!-- end div#container -->
+		</div> <!-- end div#devise_generated_content -->
+							
+	</div> <!-- end div#center_column -->
 <% end %>
