--- a/app/views/product_types/show.html.erb
+++ b/app/views/product_types/show.html.erb
@@ -43,56 +43,53 @@
 
 	
 	<script type="text/javascript" >
-
-		$(document).ready(function() {
-			/* $(".popup_base").hide(); /* workaround prevents overlays from coming up,
-			 	but menu items still do not bring up popups on demand when hover over them
-				as they should
-			*/
-			$(".css-tabs:first").tabs(".css-panes:first > div"); /* What does ':first' do?  */
-			$("#body-background").ezBgResize();
+		
+		$(document).ready(function() {	
+		//	$("#body-background").ezBgResize();
 			$("#body-background").css("background-color","#E6E6E6");				
-			checkSize();
+		//	checkSize();
 			$("#addToCart").click(function(){
 				addtocart();
 				return false;
-			});				
+			});
 		});
+		
 		function addtocart()
-		{
-			alert("Adding items to cart. Click OK to continue.")
-
-			var multi = '';
-			$("input[id*=qty_]").each(function()
-			{
-				if($(this).val()!="")
 				{
-					if(parseInt($(this).val())>0)
-					{
-						var itemid = $(this).attr('id').replace('qty_','');
-						var itemqty = $(this).val();
-						multi+=itemid+','+itemqty+';';
-					}
-				}
-			});
-			$("input[id*=qty_]").each(function()
-			{
-				$(this).val('');
-			});
+					alert("Adding items to cart. Click OK to continue.")
+					var accountid = "1114349"; //Netsuite account id
 
-			var accountid = "1114349"; //Netsuite account id
-		    //add to cart url
-			var myurl = 'http://shopping.netsuite.com/app/site/backend/additemtocart.nl?multi='+multi+'&c='+accountid+'&qtyadd=1&buyid=multi';		     
-		    //create hidden iframe in body
-		    $('body').append('<iframe id="addtocartframe" style="display:none" />'); 
-		    //change src to iframe
-		    $('#addtocartframe').attr('src', myurl);
-		    return false;
-		}
+					$("input[id*=qty_]").each(function()
+					{
+						if($(this).val()!="")
+						{
+							if(parseInt($(this).val())>0)
+							{
+								var itemid = $(this).attr('id').replace('qty_','');
+								var itemprice = $("#price_"+itemid).html().replace('$','');
+
+								var itemqty = $(this).val();
+								//add to cart url
+								var myurl = 'http://shopping.netsuite.com/app/site/backend/additemtocart.nl?&c='+accountid+'&qty='+itemqty+'&buyid='+itemid+'&amount='+itemprice;		     
+							    //create hidden iframe in body
+							    $('body').append('<iframe id="addtocartframe'+itemid+'" style="display:none" />'); 
+							    //change src to iframe
+							    $('#addtocartframe'+itemid).attr('src', myurl);
+							}
+						}
+					});
+					$("input[id*=qty_]").each(function()
+					{
+						$(this).val('');
+					});
+
+					return false;
+				}
+
 	</script>
 
 	<style type="text/css">
-		div#product_goodies {max-height:625px; overflow-y:auto; padding-right:20px; margin-top:5px;}
+		/* div#product_goodies {max-height:625px; overflow-y:auto; padding-right:20px; margin-top:5px;} */
 		div#product_image_description { margin-top:20px; padding-left:40px;}
 
 		div#product_image_description img { margin-bottom:15px; }
@@ -150,35 +147,27 @@
 <% end %>
 
 
-<%= content_for(:body) do %>
+<%= content_for(:middleBand) do %>
 
-	<div id="body-background">	
-		<!-- <img src="../images/landscapes/road_aero.jpg" width="1354" height="900" alt="Bg"> -->
-	</div>
+		<div id="body-background">	
+			<!-- <# image_tag(...) %> -->
+		</div>
     
-	<!-- container —————————————————————————————————————————————————————————————————— -->
+		<div id="left_column">
 
-	<div id="container">
-		<div id="black_screen"></div> 
+			<!-- menu —————————————————————————————————————————— -->
+			<%= render(:partial => 'shared/menu') %>
 
-	  <!-- subcontainer —————————————————————————————————————————————————————— -->
+			<!-- featured products  —————————————————————— -->
+			<%= render(:partial => 'shared/featuredProducts') %>
 
-		<div id="subcontainer">
-		
-			<!-- menu —————————————————————————————————————————————————————  -->
-		
-			<%= render(:partial => '/shared/menu') %>
-			<!-- Cut: Google cse search results now returned in left column below search button in menu  
-			<#= render(:partial => '/shared/search') #>
-			-->
+		</div><!-- end of div 'left_column' -->
 
-	    <!-- main content ————————————————————————————————————————————————————— -->
-
-			<div id="main_content">
+		<div id="center_column">
 				
-				<!-- breadcrumb trail ——————————————————————————————————————————————— -->
+				<!-- breadcrumb trail ————————————————————————————————————————— -->
 				<%= render(:partial => "/shared/breadcrumb") %>
-				<!-- Too wide to fit on breadcrumb line <%# raw(@product_type.name) %> -->
+				
 			
 				<!-- error messages  ———————————————————————————————————————————————————— -->
 				<div id="error-messages" style="display:none">
@@ -222,7 +211,7 @@
 						<tr>
 							<td><%= p.tms_part_no %></td>
 							<td><%= p.description %></td>
-							<td class="price">
+							<td class="price" id="price_<%= p.netsuite_item_no %>">
 								<%= if current_user 
 							  	case current_user.price_schedule
 										when "tru-blue"
@@ -293,9 +282,7 @@
 	
 			</div> <!-- end div#product_goodies -->
 
-			</div> <!-- end div#main_content -->
-
-		</div><!-- end div#subcontainer -->
+			</div> <!-- end div#center_column -->
 
 
 		<!-- RIGHT CONTENT ————————————————————————————————————————————————————— -->
@@ -303,9 +290,6 @@
 		<div id="right_content_container">		
 	    <%= render(:partial => '/shared/rightContent') %>		
 		</div>
-
-	</div><!-- end div#container -->
-
 
 	<!-- logo_container ——————————————————————————————————————————————————————————————— -->
 
