--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -4,29 +4,40 @@
 	<style type="text/css">
 		div#devise_generated_content form { margin-bottom:20px; } 
 		div#devise_generated_content a { color:orange; }
-			div#devise_generated_content input {margin-bottom:10px;}
+		div#devise_generated_content input {margin-bottom:10px;}
+		div#center_column { /* override default layout */
+			padding-left:40px; 
+			padding-top:0px;
+			}
+		div#center_column div#devise_generated_content h2 { 
+			background-color: orange;
+			color:white;
+			padding: 5px 10px 10px 10px;
+			width: 155px;
+		}
+		div#center_column div#devise_generated_content hr { 
+			width:94%;
+			float:left;
+			margin-top:-11px;
+			padding-top:0px;
+		}
 	</style>
 <% end %>
 
 
 <!-- body includes  ————————————————————————————————————————————————————  -->
-<%= content_for(:body) do %>
 
-	<div id="body-background">	
-		<!-- <img src="../images/landscapes/road_aero.jpg" width="1354" height="900" alt="Bg"> -->
-	</div>
-	<div id="container">
-		<div id="subcontainer">
+		<%= content_for(:middleBand) do %>
+			<div id="left_column" >
 
-			<!-- menu —————————————————————————————————————————————————————  -->
+				<!-- menu —————————————————————————————————————————— -->
+				<%= render(:partial => 'shared/menu') %>
 
-			<%= render :partial => 'shared/menu' %>
-			<%= render :partial => 'shared/search' %>
+				<!-- featured products  —————————————————————— -->
+				<%= render(:partial => 'shared/featuredProducts') %>
+			</div><!-- end of div 'left_column' -->
 
-	    <!-- main content —————————————————————————————————————————————— -->
-
-			<div id="main_content">
-				
+			<div id="center_column">
 				<!-- menu popups: top level categories ——————————————————————————————————— -->
 				<%= render(:partial => "/shared/menu_popups") %>
 				
@@ -35,6 +46,7 @@
 				<div id="devise_generated_content">
 
 					<h2>Edit <%= resource_name.to_s.humanize %></h2>
+					<hr></hr></br>
 
 					<%= form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => { :method => :put }) do |f| %>
 					
@@ -83,8 +95,6 @@
 					<%= link_to "Back", :back %>
 					
 				</div> <!-- end div#devise_generated_content -->
-					
-			</div> <!-- end div#main_content -->
-		</div> <!-- end div#subcontainer -->
-	</div> <!-- end div#container -->
+			</div> <!-- end div#center_column -->
+
 <% end %>
