--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -4,72 +4,83 @@
 		div#devise_generated_content form { margin-bottom:20px; } 
 		div#devise_generated_content a { color:orange; }
 		div#devise_generated_content input {margin-bottom:10px;}
-		
+		div#center_column { /* override default layout */
+			padding-left:40px; 
+			padding-top:0px;
+			}
+		div#center_column div#devise_generated_content h2 { 
+			background-color: orange;
+			color:white;
+			padding: 5px 10px 10px 10px;
+			width: 155px;
+		}
+		div#center_column div#devise_generated_content hr { 
+			width:94%;
+			float:left;
+			margin-top:-11px;
+			padding-top:0px;
+		}
 	</style>
 <% end %>
 
 <!-- body includes  ————————————————————————————————————————————————————  -->
 
-<%= content_for(:body) do %>
-	<div id="body-background">	
-		<!-- <img src="../images/landscapes/road_aero.jpg" width="1354" height="900" alt="Bg"> -->
-	</div>
-	<div id="container">
-		<div id="subcontainer">
-	
-			<!-- menu —————————————————————————————————————————————————————  -->
-	
-			<%= render :partial => 'shared/menu' %>
-			<%= render :partial => 'shared/search' %>
+<%= content_for(:middleBand) do %>
+	<div id="left_column" >
 
-	    <!-- main content —————————————————————————————————————————————— -->
+		<!-- menu —————————————————————————————————————————— -->
+		<%= render(:partial => 'shared/menu') %>
 
-			<div id="main_content">
-				<!-- menu popups: top level categories ——————————————————————————————————— -->
-				<%= render(:partial => "/shared/menu_popups") %>
-				
-				<p class="notice"><%= notice %></p> <!-- needed by devise -->
-				<p class="alert"><%= alert %></p> <!-- needed by devise -->
-				<div id="devise_generated_content">
-					<h2>Register</h2>
+		<!-- featured products  —————————————————————— -->
+		<%= render(:partial => 'shared/featuredProducts') %>
+	</div><!-- end of div 'left_column' -->
 
-					<%= form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f| %>
-					  <%= devise_error_messages! %>
-					
-						<div><%= f.label :first_name %><br />
-					  <%= f.text_field :first_name %></div>
-					
-						<div><%= f.label :last_name %><br />
-					  <%= f.text_field :last_name %></div>
+	<div id="center_column">
+		<!-- menu popups: top level categories ——————————————————————————————————— -->
+		<%= render(:partial => "/shared/menu_popups") %>
+		
+		<p class="notice"><%= notice %></p> <!-- needed by devise -->
+		<p class="alert"><%= alert %></p> <!-- needed by devise -->
+		<div id="devise_generated_content">
+			<h2>Register</h2>
+			<hr></hr></br>
 
-					  <div><%= f.label :email %><br />
-					  <%= f.email_field :email %></div>
+			<%= form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f| %>
+			  <%= devise_error_messages! %>
+			
+				<div><%= f.label :first_name %><br />
+			  <%= f.text_field :first_name %></div>
+			
+				<div><%= f.label :last_name %><br />
+			  <%= f.text_field :last_name %></div>
 
-					  <div><%= f.label :password %><br />
-					  <%= f.password_field :password %></div>
+			  <div><%= f.label :email %><br />
+			  <%= f.email_field :email %></div>
 
-					  <div><%= f.label :password_confirmation %><br />
-					  <%= f.password_field :password_confirmation %></div>
-					
-						<div><%= f.label "Are you a clinician?" %><br />
-					  <%= f.check_box :clinician %></div>
-					
-						<div><%= f.label "Clinic name" %><br />
-					  <%= f.text_field :clinic_name %></div>
-					
-						<div><%= f.label "Work phone" %><br />
-					  <%= f.telephone_field :phone %></div>
-					
-					  <div><%= f.label "Extension (if any)" %><br />
-					  <%= f.text_field :extension %></div>
-										
-					  <div><%= f.submit "Register" %></div>
-					<% end %>
+			  <div><%= f.label :password %><br />
+			  <%= f.password_field :password %></div>
 
-					<%= render :partial => "devise/shared/links" %>
-					
-				</div> <!-- end div#devise_generated_content -->
-			</div> <!-- end div#main_content -->
-		</div> <!-- end div#subcontainer -->
-	</div> <!-- end div#container -->
-<% end %>
+			  <div><%= f.label :password_confirmation %><br />
+			  <%= f.password_field :password_confirmation %></div>
+			
+				<div><%= f.label "Are you a clinician?" %><br />
+			  <%= f.check_box :clinician %></div>
+			
+				<div><%= f.label "Clinic name" %><br />
+			  <%= f.text_field :clinic_name %></div>
+			
+				<div><%= f.label "Work phone" %><br />
+			  <%= f.telephone_field :phone %></div>
+			
+			  <div><%= f.label "Extension (if any)" %><br />
+			  <%= f.text_field :extension %></div>
+								
+			  <div><%= f.submit "Register" %></div>
+			<% end %>
+
+			<%= render :partial => "devise/shared/links" %>
+			
+		</div> <!-- end div#devise_generated_content -->
+	</div> <!-- end div#center_column -->
+
+<% end %> <!-- end :content_for middleBand -->
