--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -35,7 +35,7 @@
 		<%= stylesheet_link_tag "menu.css" %> 
     <%= stylesheet_link_tag "tabs.css" %>
     	<!-- <%# stylesheet_link_tag "jquery_tools_tabs_no_images.css" %> unused; used by Mavic tabbed sibling nav; not in /public/javascripts -->
-		<%= stylesheet_link_tag "left_nav_popups.css" %> <!-- added by TA 1/4/2012; controls top alignment of popups; move into index.html.erb?  -->
+		<%= stylesheet_link_tag "left_nav_popups_test.css" %> <!-- added by TA 1/4/2012; controls top alignment of popups for menu items -->
 		<!-- standard js files -->
 		
 		<%= javascript_include_tag "jquery-1.4.4.min.js" %>
@@ -65,13 +65,8 @@
 		<link href="../images/favicon.ico" rel="shortcut icon">
 
 		
-		<!-- styles for stuff in header: register/login; view-cart checkout -->
-		<style type="text/css">
-			div#register_login { position:absolute; top:14px; right:30px; z-index:98; color:orange;font-size:12px;}
-			div#register_login a { color:orange; font-weight:bold; font-size:12px; }
-			div#cart_links { margin-top:20px;} 
-			div#cart_links a { font-size:12px!important; }
-		</style>
+		<!-- styles for stuff in header -->
+
 		
 		<!-- styles for stuff in footer -->
 		<style type="text/css">
@@ -81,16 +76,8 @@
 			div#privacyPolicy dl { margin-left:10px; font-size:9px; line-height:12px;}
 			div#privacyPolicy dt { font-weight:bold;}
 			div#privacyPolicy dd { font-weight:normal; margin-left:10px;}
-			div#catelogImage { border: 1px solid gray;}
-			
-			/* for interim hack to allow manual closing of popups from level menu; */
-			div.subcategories img.close {position:absolute; top:0px; right:-10px; opacity:0.5; }
-			div.leafCategories img.close {position:absolute; top:0px; right:-10px; opacity:0.5; }
-			div.popup_base img.close {position:absolute; top:10px; right:10px; opacity:0.5; }
-		
-		</style>
-		<!-- styles associated with competitor cross reference in footer bar -->
-		<style type="text/css">
+			div#catelogImage { border: 1px solid gray;}			
+			/* ---- metasearch related ---------------------  */
 			div#metasearch { display:inline; margin-right:20px;}	
 			div#metasearch form { display:inline;}
 			div#metasearch form label { color:white; display:inline;}	
@@ -115,7 +102,16 @@
 					-moz-border-radius: 2px;
 					-webkit-border-radius: 2px;
 					width:20px;
-				} 
+				}
+		
+		
+		</style>
+		
+		<!-- interim hack to allow manual closing of popup top level category windows -->
+		<style type="text/css">
+				div.subcategories img.close {position:absolute; top:0px; right:-10px; opacity:0.5; }
+				div.leafCategories img.close {position:absolute; top:0px; right:-10px; opacity:0.5; }
+				div.popup_base img.close {position:absolute; top:10px; right:10px; opacity:0.5; }		
 		</style>
 		
 		<script type="text/javascript">
@@ -296,225 +292,74 @@
 	
 	</head>
 	<body id="body">
-		
-		<!-- flash messages needed by active admin; place these within #main_con-->
+		<div id="container" class="home" >
 
+			<div id="black_screen"></div>
 
-		<!-- header links  ————————————————————————————————————————————————————————— -->
-		<div id="register_login">
-			<% if user_signed_in? %>
-				<span style="color:orange";>Signed in as <%= current_user.email %>. Not you?&nbsp; </span>
-				<%= link_to "Sign out", destroy_user_session_path %>
-				<p style="text-align:right;margin-top:5px;"><%= link_to "My Account", edit_user_registration_path %></p>
-			<% else %>
-				<%= link_to "Register", new_user_registration_path %> or 
-				<%= link_to "Sign in",  new_user_session_path %></br>			
-			<% end %>
-		</div>
+			<!-- header links  ————————————————————————————————————————————————————————— -->
+			<div id="header">
+				<div id="register_login">
+					<ul>
+						<% if user_signed_in? %>
+							<li>
+								<span style="color:orange";>Signed in as <%= current_user.email %>. Not you?&nbsp; </span>
+								<%= link_to "Sign out", destroy_user_session_path %>
+							</li>
+							<li>
+								<%= link_to "My Account", edit_user_registration_path %>
+							</li>
+						<% else %>
+							<li>
+								<%= link_to "Register", new_user_registration_path %> or <%= link_to "Sign in",  new_user_session_path %>
+							</li>		
+						<% end %>
+						<li><a href="http://www.tru-logic.com/s.nl/sc.3/.f">View Cart</a></li>
+						<li><a href="https://checkout.netsuite.com/s.nl/c.1114349/sc.4/.f">Checkout</a></li>
+					</ul>
+				</div>
+						<!--
+						<li><a href="https://checkout.netsuite.com/s.nl?c=1114349&sc=6&login=T&reset=T&newcust=T&noopt=T">register</a></li>
+						<li><a href="https://checkout.netsuite.com/s.nl/c.1114349/sc.6/.f?login=T&reset=T">login</a></li>
+						-->
+			</div> <!-- end of div 'header' -->
 			
-		<div id="cart_links">
-			<ul>
-				<!--
-				<li><a href="https://checkout.netsuite.com/s.nl?c=1114349&sc=6&login=T&reset=T&newcust=T&noopt=T">register</a></li>
-				<li><a href="https://checkout.netsuite.com/s.nl/c.1114349/sc.6/.f?login=T&reset=T">login</a></li>
-				-->
-				<li><a href="http://www.tru-logic.com/s.nl/sc.3/.f">View Cart</a></li>
-				<li><a href="https://checkout.netsuite.com/s.nl/c.1114349/sc.4/.f">Checkout</a></li>
-			</ul>
-		</div>
-		
-
-		
-		<!--
-		<form id="search_form" action="/en/search/google_cse_adv" method="post" name="search_form">
-			<script type="text/javascript" src="http://www.google.com/jsapi">
-</script> <script type="text/javascript">
-google.load('search', '1');
-			google.setOnLoadCallback(function() {
-			google.search.CustomSearchControl.attachAutoCompletion(
-			'014338948727438158850:bsnpnwdxyvo',
-			document.getElementById('search_input'),
-			'search_form');
-			});
-			</script>
-			<div id="search_wrapper">
-				<h1 id="search_hint" class="helvetica">
-					search...
-				</h1><input class="" id="search_input" type="text" name="keys" value="" maxlength="30" autocomplete="off">
-			</div><a class="submit" href="javascript:%20document.getElementById('search_form').submit();">OK</a> <input type="hidden" value="06415a73d2d0183ccd41f0ee4eec874e" name="form_token"> <input type="hidden" value="search_form" id="edit-search-form" name="form_id">
-			<div class="clear" style=""></div>
-		</form>
-	-->
-	 
-		<!-- divs for popup dialogs     ————————————————————————————————————————————— -->
-	
-		
-		<!-- contact us ——————————————————————————————— -->
-		<div id='contactUs'>
-			<p>You may reach us by Mail, Phone, Fax, E-Mail, or the web at: </p>
+			<div id="middleBand"> 
+				<!-- divs for popup dialogs     ———————————————————————————————————— -->		
+				<%= render(:partial => '/shared/popup_footer_dialogs') %>
 			
-			<h2>By Mail:</h2>
-			<p>
-				TruMedical Solutions, LLC.</br>
-				PO Box 1869</br>
-				Collegedale, TN 37315
-			</p>
-			
-			<h2>By Phone:</h2>
-			<p>
-				877-882-7844</br>
-				423-910-0121
-			</p>
-			
-			<h2>By Fax:</h2>
-			<p>
-				877-882-7845</br>
-				423-910-0121
-			</p>
-	
-			<h2>E-Mail:</h2>
-			<p>
-				<a href="sales@tru-medical.com">sales@tru-medical.com</a>
-				<a href="info@tru-medical.com">info@tru-medical.com</a>
-				<a href="customerservice@tru-medical.com">customerservice@tru-medical.com</a>
-			</p>
-			
-			<h2>By Web:</h2>
-			<p>
-				<a href="www.tru-medical.com">www.tru-medical.com</a>
-			</p>
-			
-			<p>If you prefer to email in your question, feedback or anything else, you can use the form below and someone will get back to you within 24 hours or less.  We look forward to hearing from you!
-			</p>
-			<p>[ INSERT FORM HERE ] </p>
-			<h2>Hours of Operation</h2>
-			<p>Monday thru Friday 8:30AM to 6:00PM EST</p>
-		</div>
-		
-		<!-- privacy policy ——————————————————————————————— -->
-		<div id='privacyPolicy'>
-			<h2>This website takes every precaution to protect our users' information.</h2>
-			<p>Our entire site, including but not limited to areas where we ask users to enter sensitive information (such as credit card or bank account numbers) is encrypted and is protected by an advanced 128-bit encryption software protocol – SSL.</p>
-
-			<p>While we use SSL encryption to protect sensitive information online, we also take steps to protect user-information off-line. Only employees who need the information to perform a specific task are granted access to any personally identifiable information.</p>
-
-			<p>TruMedical Solutions, LLC.  places the utmost importance on protecting information transmitted via our website and takes security precautions to protect all such information from loss, misuse, and alteration. These precautions are regularly reviewed and enhanced as part of TruMedical Solutions’ ongoing commitment to customer security and privacy.</p>
-
-			<p>If you have any questions about the security at our website, please e-mail us at: <%= mail_to "websupport@tru-medical.com",nil, :subject => "privacy policy" %>.</p>
-
-
-			<p>TruMedical Solutions, LLC.  reserves the right to alter this policy at any time. Changes will be posted immediately on our website.</p>
-
-			<h2>Privacy Policy</h2>
-			<p>At TruMedical Solutions we respect your privacy. Whether you request a catalog, place an on-line order, or e-mail us, your personal information is handled with your privacy and security in mind.</p> 
-
-			<h2>Information Collection and Use</h2>
-			<p>TruMedical Solutions collects information from our users at several points on our website:
-			<dl>
-				<dt>Registration</dt><dd>In order to use some functions of this website, a user must first complete a registration form. During registration a user is required to give their contact information (such as name and email address).</dd>
-				<dt>Ordering</dt><dd>We request information from the user when completing an order. Here, a user must provide contact information (like name and shipping address) and financial information (like credit card number, expiration date). This information is used specifically for billing purposes and to fill customer's orders. If we have trouble processing an order, this contact information is used to get in touch with the user.</dd>
-				<dt>Cookies</dt><dd>Cookies are bits of information stored on your computer that enable us to customize your shopping experience and identify you when you return. Cookies can be disabled, but please keep in mind that if you do so, your browsing experience may be limited.</dd>
-				<dt>Log Files</dt><dd>We use IP addresses to analyze trends, administer the site, and track user movement only within our website. IP addresses are not linked to personally identifiable information.</dd>
-				<dt>Communications</dt><dd>TruMedical Solutions may also retain the content of the communications that are sent to our customer service representatives.</dd>
-			</dl>
-			<h2>Information Use</h2>
-			<p>The information collected by TruMedical Solutions is used to, among other things, aggregate statistical information, facilitate system administration, improve the content of the website, fill orders, and also to respond to user requests for information and to otherwise render service. TruMedical Solutions may also use the information collected to notify site users of changes to the website, to notify visitors of new products, special promotional offers, or for other legitimate business purposes. If you do not wish to receive e-mails from us, please contact Customer Service.</p>
-
-			<h2>Confidentiality and Disclosure</h2>
-			<p>TruMedical Solutions considers the personally identifiable information contained in our business records to be confidential. TruMedical Solutions does not provide any personally identifiable information to other companies except when necessary to render service. We may disclose personally identifiable information about you to our employees for TruMedical Solutions’ internal business purposes, as well as to outside auditors, professional advisors, service providers and regulators. We make these disclosures when the disclosure is necessary to render, or conduct a legitimate business activity. We may also be required by law or legal process to disclose certain personally identifiable information about you. TruMedical Solutions may use and disclose personally identifiable information as provided for by applicable law in order to perform legitimate business activity. Some examples: billing and invoicing, administration, surveys, collection of fees and charges, marketing, service delivery and customization, maintenance and operations, technical support, hardware and software upgrades, and fraud prevention.</p>
-
-			<h2>Legal Disclaimer</h2>
-			<p>We make every reasonable effort to protect site user privacy as described. Nevertheless, we may be required by law to disclose personally identifiable information about a site user without his or her consent and without notice in order to comply with a valid legal process such as a subpoena, court order, or search warrant. We may also use or disclose personally identifiable information about you without your consent to protect our customers, employees, or property.</p>
-
-			<h2>Transmission of Information</h2>
-			<p>TruMedical Solutions transmits personally identifiable and non-personally identifiable information about you when you receive e-mail, or electronic documents. Our transmission of this information is necessary to render service. TruMedical Solutions may use third parties to deliver some features and functions of service, such as electronic document delivery. These third parties are not permitted to use your personally identifiable information except for the purpose of providing their services.</p>
-
-			<h2>Links</h2>
-			<p>This website contains links to other sites. Please be aware that TruMedical Solutions is not responsible for the privacy practices of other sites. We encourage our users to be aware when they leave our site and to read the privacy statements of each website that collects personally identifiable information. This privacy statement applies solely to information collected by TruMedical Solutions.</p>
-
-			<h2>Inactivate Online Accounts</h2>
-			<p>An online account may be inactivated by email request to Site Support. Inactivation could take up to 24 hours and only applies to registered online accounts, not ordering accounts. If there is an urgent security issue, please change the account password and email address if necessary and contact Site Support.</p>
-
-			<h2>Report Suspected Fraud</h2>
-			<p>If you suspect that you’re login information has been misused by other parties or fraudulent ordering is occurring on your account, please change your password and contact Customer Service immediately.</p>
-			
-		</div>
-		
-		<!-- comment out to attempt to avoid conflict with devise on Users
-		<%# render :partial => '/shared/request_catelog' %>
-	  -->
-		
-			<%= yield :body %>
-
-		
-			  
-		<!-- footer     ————————————————————————————————————————————————————————————— -->
-		
-		<!-- NOTE: class="home_footer" makes the div 'position:absolute'; w/o it is 'position:relative';
-				 This is defined in file style.css (modified version of style-mavic.css) which became the
-				 base for trumedical_base.css.
-				 Fix this once get home page working in Rails.
-		-->
-		
-		<div id="footer" >
-		
-		<!--
-			<script type="text/javascript">
-				var nlvalue,firstFocus=true;
-				$(document).ready(function() {
-					var enternl = $('#newsl_input');
-					enternl.focus( function () {
-						if(firstFocus){
-							firstFocus=false;
-							nlvalue = enternl.val();
-							enternl.val('');
-						}
-				}).blur( function () {
-					(enternl.val().replace(/\s*/,"") == "")?enternl.val(nlvalue):"";
-				});
-				popupnewslettersubscript();
-				});
-			</script>
-		-->
-			<div class="left">
-				<a href="#requestCatelog">Request a Catalog</a> <!-- restyle; its not a clickable link -->
+				<!-- divs within middleBand unique to particular page templates ———— -->		
+				<%= yield :middleBand %>
 				
-				
-				<!-- search by competitor part no ——————————————————————————————— -->
-				<!-- commented out because when used with devise register/login users/registration gets an error
-					when it attempts to generate a link to { :controller => 'devise/products', :action => 'search' } 
-					rather than { :controller => 'products', :action => 'search'} 
-				-->
-				<%= render :partial => '/shared/metasearch' %>
+			</div> <!-- end div 'middleBand' -->
+  
+			<!-- footer     ————————————————————————————————————————————————————————————— -->
 		
+			<div id="footer" >
+
+				<div id="footer_left"> <!-- div used only to center contents within footer -->
+					<a href="#requestCatelog">Request a Catalog</a> <!-- restyle; its not a clickable link -->
 				
-				<!-- <a href="#">Competitor Cross Reference:</a> -->
-				<!--
-				<form id="nlsubmit" action="#" method="post" name="nlsubmit">
-					<a href="#">Competitor Cross Reference:</a>
-					<div class="whitebg">
-						<input class="enternl" id="sammons_no" type="text" name="sammons_no" value="Enter product number" maxlength="100" autocomplete="off" style="width:136px;"> 
-						<input class="submitnl" type="submit" name="submitnl" value="GO">
-					</div>
-				</form>		
-			 -->
-				<a href="#contactUs">Contact Us</a> 
-				<a href="#privacyPolicy">Privacy Policy</a> 
-				<!-- <a href="#">FAQs</a> -->
+					<!-- search by competitor part no ——————————————————————————————— -->
+					<!-- commented out because when used with devise register/login users/registration gets an error
+						when it attempts to generate a link to { :controller => 'devise/products', :action => 'search' } 
+						rather than { :controller => 'products', :action => 'search'} 
+					-->
+					<!-- <%# render :partial => '/shared/metasearch' %> -->
+
+					<a href="#contactUs">Contact Us</a> 
+					<a href="#privacyPolicy">Privacy Policy</a> 
+					<!-- <a href="#">FAQs</a> -->
 				
-				<span style="color:white;">Find us on:</span> 
-				<a href="http://www.facebook.com/trumedical"><img src="../images/footer/facebook.png" width="16" height="16" alt="">&nbsp;Facebook</a> 
-				<a href="http://twitter.com/trumedical"><img src="../images/footer/twitter.png" width="16" height="16" alt="">&nbsp;Twitter</a>
-				<!-- <a>&copy;TruMedical Solutions LLC, 2011</a> -->    
-			</div> <!-- end of div 'left' -->
-		
-			<div class="right"></div> 			<!-- used for? -->
-			<div class="clear"></div>				<!-- purpose? -->
-			<div class="clear-both"></div>  <!-- purpose? -->
-				
-		</div> <!-- end div 'footer' -->
-		
+					<span style="color:white;">Find us on:</span> 
+					<a href="http://www.facebook.com/trumedical"><img src="../images/footer/facebook.png" width="16" height="16" alt="">&nbsp;Facebook</a> 
+					<a href="http://twitter.com/trumedical"><img src="../images/footer/twitter.png" width="16" height="16" alt="">&nbsp;Twitter</a>
+					<!-- <a>&copy;TruMedical Solutions LLC, 2011</a> -->
+				</div>	
 			
+			</div> <!-- end div 'footer' -->
+		
+		</end> <!-- end div 'container -->	
+		
 		<%= yield :js_before_close_of_body %> 
 		
 	</body>
